// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcMetrolineCard should render as expected 1`] = `
<div
  class="ec-metroline-card"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard should render as expected when has narrow padding 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--has-narrow-padding"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard should render as expected when is collapsed 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--is-collapsed"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard should render as expected when is collapsed and has narrow padding 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--is-collapsed ec-metroline-card--has-narrow-padding"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard should render the slot as expected 1`] = `
<div
  class="ec-metroline-card"
  data-test="ec-metroline-card"
>
  <p>
    This is a Metroline Card
  </p>
</div>
`;
